--- a/index.html
+++ b/index.html
@@ -363,15 +363,9 @@
                 <!-- CAROUSEL -->
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://placehold.co/1300x600/red/white/png" class="d-block w-100" alt="..." width="1300" height="600">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://placehold.co/1300x600/blue/white/png" class="d-block w-100" alt="..." width="1300" height="600">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="https://placehold.co/1300x600/tomato/white/png" class="d-block w-100" alt="..." width="1300" height="600">
-                        </div>
+                        <div class="carousel-item hero__carousel active"></div>
+                        <div class="carousel-item hero__carousel"></div>
+                        <div class="carousel-item hero__carousel"></div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
