Offer text update

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         <section class="offer">
             <div class="container">
                 <div class="offer__container">
-                    <p class="offer__text">Farg'ona neft va gaz sanoati kolleji 2024-2025 o’quv yiliga 16yo’nalish bo’yicha kasbga yo’naltirilgan mutaxassisliklar asosida11-sinf bitiruvchilari, kasb-hunar maktablari va litsey bitiruvchilarini grand hamda to’lov shartnoma asosida o’qishgataklif etadi.</p>
+                    <p class="offer__text">Farg'ona neft va gaz sanoati kolleji 2024-2025 o’quv yiliga 11 ta yo’nalish bo’yicha kasbga yo’naltirilgan mutaxassisliklar asosida 11-sinf bitiruvchilari, kasb-hunar maktablari va litsey bitiruvchilarini grand hamda to’lov shartnoma asosida o’qishga taklif etadi.</p>
                     <a href="#" class="offer__link">Qabul kvotasi bilan tanishish</a>
                 </div>
             </div>
