Site header update

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <img class="site-header__img" src="img/main/logo-neft.png" alt="Farg'ona neft va gaz kolleji logotipi" width="70" height="70">
                 <h2 class="site-header__title">Farg'ona neft va gaz sanoati kolleji</h2>
             </a>
+            <a class="site-header__tablet" href="index.html">
+                <img class="site-header__img" src="img/main/logo-neft.png" alt="Farg'ona neft va gaz kolleji logotipi" width="70" height="70">
+                <h2 class="site-header__title">Farg'ona neft va gaz sanoati kolleji</h2>
+            </a>
             <!-- SITENAV -->
             <nav class="site-header__sitenav sitenav">
                 <ul class="sitenav__list">
