--- a/index.html
+++ b/index.html
@@ -576,6 +576,9 @@
                                 <div class="carousel-item">
                                     <img src="https://placehold.co/600x400/orange/white/png" class="d-block w-100" alt="...">
                                 </div>
+                                <div class="carousel-item">
+                                    <img src="https://placehold.co/600x400/blue/white/png" class="d-block w-100" alt="...">
+                                </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
