TSS section update

--- a/index.html
+++ b/index.html
@@ -615,6 +615,7 @@
         <section class="tss">
             <div class="tss__container container">
                 <h2 class="tss__heading">Tss</h2>
+                <p class="tss__paragraph">O'quvchilar va ota-onalar tomonidan eng ko'p berilgan savollar</p>
                 <!-- ACCORDION -->
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
