--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farg'ona neft va gaz sanoati kolleji</title>
+    <meta name="keywords" content="Neft va gaz sanoati bo'yicha mutaxassislarni tayyorlovchi ta'lim markazi">
+    <meta name="author" content="Nodirbek Abdumalikov - nodmalikov@mail.ru">
+    <meta name="description" content="Neft, neft va gaz, FNQIZ, Uzbekneftgaz, neft va gazni qayta ishlash, gaz-transport uskunalarini ishlatish, nasos va kompressor qurulmalarini ishlatish, elektr uskunalarini tamirlash va ularga xizmat ko'rsatish bo'yicha elektromontyor, payvandlovchi, elektrgazpayvandlash ishlari, avtomatika va nazorat o'lchov asboblari sozlovchisi, energetika, kimyo texnologiya, mexanika, elektronika, Farg'ona viloyati, Qirguli shaharchasi, Jo'ydam">
     
     <!-- CSS-LINKS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <!-- WEBSITE-ICON -->
+    <link rel="icon" type="image/png" href="img/main/logo-neft.png">
 </head>
 <body>
     
@@ -496,7 +501,7 @@
                     </div>
                     <div class="directions__card">
                         <img class="directions__img" src="./img/card/eco.png" alt="" width="50" height="50">
-                        <h4 class="directions__title">Muqobil va noananaviy energiya manbalari qurilmalariga xizmat</h4>
+                        <h4 class="directions__title">Muqobil va noananaviy energiya manbalari qurilmalariga xizmat ko'rsatish</h4>
                     </div>
                     <div class="directions__card">
                         <img class="directions__img" src="./img/card/oce.png" alt="" width="50" height="50">
