Change images to url link and add news html file

--- a/index.html
+++ b/index.html
@@ -496,40 +496,40 @@
                 <h2 class="pictures__heading">Galereya</h2>
                 <div class="pictures__list">
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/accept-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/XYbcdfNV/accept-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/ai-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/zXWFytrt/ai-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/assembly-hall.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/BvZTwJ1k/assembly-hall.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/wisdom-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/QdJgbFVc/book-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/book-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/HLSQqFwx/chqbt-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/chqbt-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/zBVn8p7k/computer-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/computer-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/nzgqz7wf/english-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/english-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/C58kf1WB/gym.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/gym.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/ryRSHnKV/history-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/history-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/gk9vbVZv/laboratory-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/laboratory-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/rFS5VD17/lesson-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="img/room/lesson-room.jpg" alt="" width="350" height="200">
+                        <img class="pictures__img" src="https://i.postimg.cc/NjBm5QbF/wisdom-room.jpg" alt="Of room" width="350" height="200">
                     </div>
                 </div>
             </div>
@@ -573,16 +573,16 @@
                         <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="img/room/gym.jpg" class="d-block w-100" alt="..." width="500" height="400">
+                                    <img src="https://i.postimg.cc/rFS5VD17/lesson-room.jpg" class="d-block w-100" alt="Of room image" width="500" height="400">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/room/book-room.jpg" class="d-block w-100" alt="..." width="500" height="400">
+                                    <img src="https://i.postimg.cc/gk9vbVZv/laboratory-room.jpg" class="d-block w-100" alt="Of room image" width="500" height="400">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/room/assembly-hall.jpg" class="d-block w-100" alt="..." width="500" height="400">
+                                    <img src="https://i.postimg.cc/C58kf1WB/gym.jpg" class="d-block w-100" alt="Of room image" width="500" height="400">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/room/lesson-room.jpg" class="d-block w-100" alt="..." width="500" height="400">
+                                    <img src="https://i.postimg.cc/QdJgbFVc/book-room.jpg" class="d-block w-100" alt="Of room image" width="500" height="400">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
