Site header update

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <!-- DROPDOWN -->
                     <ul class="sitenav-mobile__list">
                         <li class="sitenav-mobile__item">
-                            <a class="sitenav-mobile__link" href="#">Axborot xizmati</a>
+                            <a class="sitenav-mobile__link" href="mold.html">Axborot xizmati</a>
                         </li>
                         <li class="sitenav-mobile__item">
                             <a class="sitenav-mobile__link" href="#">Rahbariyat</a>
