--- a/mold.html
+++ b/mold.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farg'ona neft va gaz sanoati kolleji</title>
+    <title>FNGSK</title>
     <meta name="keywords" content="Neft va gaz sanoati bo'yicha mutaxassislarni tayyorlovchi ta'lim markazi">
     <meta name="author" content="Bexzodbek, Nodirbek - nodmalikov@mail.ru">
     <meta name="description" content="Neft, neft va gaz, FNQIZ, Uzbekneftgaz, neft va gazni qayta ishlash, gaz-transport uskunalarini ishlatish, nasos va kompressor qurulmalarini ishlatish, elektr uskunalarini tamirlash va ularga xizmat ko'rsatish bo'yicha elektromontyor, payvandlovchi, elektrgazpayvandlash ishlari, avtomatika va nazorat o'lchov asboblari sozlovchisi, energetika, kimyo texnologiya, mexanika, elektronika, Farg'ona viloyati, Qirguli shaharchasi, Jo'ydam">
