Change pictures section img

--- a/index.html
+++ b/index.html
@@ -496,40 +496,31 @@
                 <h2 class="pictures__heading">Galereya</h2>
                 <div class="pictures__list">
                     <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/XYbcdfNV/accept-room.jpg" alt="Of room" width="350" height="200">
+                        <img class="pictures__img" src="img/room/chemistry-room.jpg" alt="Of room image" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/zXWFytrt/ai-room.jpg" alt="Of room" width="350" height="200">
+                        <img class="pictures__img" src="img/room//conferense-hall.jpg" alt="Of room image" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/BvZTwJ1k/assembly-hall.jpg" alt="Of room" width="350" height="200">
+                        <img class="pictures__img" src="img/room/english-room.jpg" alt="Of room image" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/QdJgbFVc/book-room.jpg" alt="Of room" width="350" height="200">
+                        <img class="pictures__img" src="img/room/history-room.jpg" alt="Of room image" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/HLSQqFwx/chqbt-room.jpg" alt="Of room" width="350" height="200">
+                        <img class="pictures__img" src="img/room/sport-hall.jpg" alt="Of room image" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/zBVn8p7k/computer-room.jpg" alt="Of room" width="350" height="200">
+                        <img class="pictures__img" src="img/room/information-room.jpg" alt="Of room image" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/nzgqz7wf/english-room.jpg" alt="Of room" width="350" height="200">
+                        <img class="pictures__img" src="img/room/library.jpg" alt="Of room image" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/C58kf1WB/gym.jpg" alt="Of room" width="350" height="200">
+                        <img class="pictures__img" src="img/room/meeting-room.jpg" alt="Of room image" width="350" height="200">
                     </div>
                     <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/ryRSHnKV/history-room.jpg" alt="Of room" width="350" height="200">
-                    </div>
-                    <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/gk9vbVZv/laboratory-room.jpg" alt="Of room" width="350" height="200">
-                    </div>
-                    <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/rFS5VD17/lesson-room.jpg" alt="Of room" width="350" height="200">
-                    </div>
-                    <div class="pictures__item">
-                        <img class="pictures__img" src="https://i.postimg.cc/NjBm5QbF/wisdom-room.jpg" alt="Of room" width="350" height="200">
+                        <img class="pictures__img" src="img/room/physics-room.jpg" alt="Of room image" width="350" height="200">
                     </div>
                 </div>
             </div>
