--- a/index.html
+++ b/index.html
@@ -561,28 +561,50 @@
                 <div class="news__wrapper wrapper-news">
                     <div class="wrapper-news__carousel">
                         <!-- CAROUSEL -->
-                        <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="https://i.postimg.cc/rFS5VD17/lesson-room.jpg" class="d-block w-100" alt="Of room image" width="500" height="400">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://i.postimg.cc/gk9vbVZv/laboratory-room.jpg" class="d-block w-100" alt="Of room image" width="500" height="400">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://i.postimg.cc/C58kf1WB/gym.jpg" class="d-block w-100" alt="Of room image" width="500" height="400">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://i.postimg.cc/QdJgbFVc/book-room.jpg" class="d-block w-100" alt="Of room image" width="500" height="400">
-                                </div>
+                        <div id="carouselExampleCaptions" class="carousel slide news__carousel">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="img/room/book-rom.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h5>First slide label</h5>
+                                  <p>Some representative placeholder content for the first slide.</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/room/english-room.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h5>Second slide label</h5>
+                                  <p>Some representative placeholder content for the second slide.</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/room/library.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h5>Third slide label</h5>
+                                  <p>Some representative placeholder content for the third slide.</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="img/room/sport-hall.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h5>Fourth slide label</h5>
+                                  <p>Some representative placeholder content for the third slide.</p>
+                                </div>
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
                             </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
                             </button>
                         </div>
                     </div>
