--- a/index.html
+++ b/index.html
@@ -577,14 +577,14 @@
                                 </div>
                               </div>
                               <div class="carousel-item">
-                                <img src="img/room/english-room.jpg" class="d-block w-100" alt="...">
+                                <img src="img/room/meeting-room.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                   <h5>Second slide label</h5>
                                   <p>Some representative placeholder content for the second slide.</p>
                                 </div>
                               </div>
                               <div class="carousel-item">
-                                <img src="img/room/library.jpg" class="d-block w-100" alt="...">
+                                <img src="img/room/chemistry-room.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                   <h5>Third slide label</h5>
                                   <p>Some representative placeholder content for the third slide.</p>
@@ -610,24 +610,36 @@
                     </div>
                     <div class="wrapper-news__list">
                         <a class="wrapper-news__item" href="news.html">
-                            <h4 class="wrapper-news__title">Lorem ipsum</h4>
-                            <p class="wrapper-news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci enim consequatur qui accusamus quos perspiciatis vero hic praesentium aut temporibus dignissimos et nemo possimus iste, nam corrupti eligendi ducimus odit.</p>
-                            <span class="wrapper-news__date">12.05.2024</span>
+                            <img class="wrapper-news__img" src="img/room/book-rom.jpg" alt="" width="160" height="100">
+                            <div class="wrapper-news__content">
+                                <h4 class="wrapper-news__title">Lorem ipsum dolor sit amet</h4>
+                                <p class="wrapper-news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, eum. Animi saepe quis quidem cumque consequatur aperiam iste veniam quae fugiat mollitia.</p>
+                                <span class="wrapper-news__date">12.05.2024</span>
+                            </div>
                         </a>
                         <a class="wrapper-news__item" href="news.html">
-                            <h4 class="wrapper-news__title">Lorem ipsum</h4>
-                            <p class="wrapper-news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci enim consequatur qui accusamus quos perspiciatis vero hic praesentium aut temporibus dignissimos et nemo possimus iste, nam corrupti eligendi ducimus odit.</p>
-                            <span class="wrapper-news__date">2.06.2024</span>
+                            <img class="wrapper-news__img" src="img/room/meeting-room.jpg" alt="" width="160" height="100">
+                            <div class="wrapper-news__content">
+                                <h4 class="wrapper-news__title">Lorem ipsum dolor sit amet</h4>
+                                <p class="wrapper-news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, eum. Animi saepe quis quidem cumque consequatur aperiam iste veniam quae fugiat mollitia.</p>
+                                <span class="wrapper-news__date">12.05.2024</span>
+                            </div>
                         </a>
                         <a class="wrapper-news__item" href="news.html">
-                            <h4 class="wrapper-news__title">Lorem ipsum</h4>
-                            <p class="wrapper-news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci enim consequatur qui accusamus quos perspiciatis vero hic praesentium aut temporibus dignissimos et nemo possimus iste, nam corrupti eligendi ducimus odit.</p>
-                            <span class="wrapper-news__date">9.06.2024</span>
+                            <img class="wrapper-news__img" src="img/room/chemistry-room.jpg" alt="" width="160" height="100">
+                            <div class="wrapper-news__content">
+                                <h4 class="wrapper-news__title">Lorem ipsum dolor sit amet</h4>
+                                <p class="wrapper-news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, eum. Animi saepe quis quidem cumque consequatur aperiam iste veniam quae fugiat mollitia.</p>
+                                <span class="wrapper-news__date">12.05.2024</span>
+                            </div>
                         </a>
                         <a class="wrapper-news__item" href="news.html">
-                            <h4 class="wrapper-news__title">Lorem ipsum</h4>
-                            <p class="wrapper-news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci enim consequatur qui accusamus quos perspiciatis vero hic praesentium aut temporibus dignissimos et nemo possimus iste, nam corrupti eligendi ducimus odit.</p>
-                            <span class="wrapper-news__date">28.06.2024</span>
+                            <img class="wrapper-news__img" src="img/room/sport-hall.jpg" alt="" width="160" height="100">
+                            <div class="wrapper-news__content">
+                                <h4 class="wrapper-news__title">Lorem ipsum dolor sit amet</h4>
+                                <p class="wrapper-news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, eum. Animi saepe quis quidem cumque consequatur aperiam iste veniam quae fugiat mollitia.</p>
+                                <span class="wrapper-news__date">12.05.2024</span>
+                            </div>
                         </a>
                     </div>
                 </div>
